# sandbox

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  GOAL.md  README.md  ci-cd-configurator.skill  install.py  journal.md  plan.json  project.json  registry.md  requirements-dev.txt  requirements.json  run-log.jsonl  setup.sh  status.json  test_pipeline_contracts.py
.agent-project/: DELIVERY.md  charter.md  (+7 more)
.github/skills/presenter/: SKILL.md  pyproject.toml
.github/skills/presenter/assets/: config.example.json
.github/skills/presenter/references/examples/: components.pptx  patterns.pptx
.github/skills/presenter/references/guides/: arch-elements.md  aws-design.md  chart-bar.md  chart-line.md  design-rules.md  design-vocabulary.md  setup.md
.github/skills/presenter/references/workflows/: create-new-1-briefing.md  create-new-1-outline.md  create-new-2-compose.md  create-style.md  planner-answers.md  slide-json-spec.md
.github/skills/presenter/scripts/: download_material_icons.py
.github/skills/presenter/sdpm/: __init__.py  api.py
.github/skills/presenter/sdpm/assets/: __init__.py
.github/skills/presenter/sdpm/builder/: __init__.py
.github/skills/presenter/sdpm/converter/: __init__.py  color.py  constants.py  elements.py  text.py  xml_helpers.py
.github/skills/presenter/sdpm/diff/: __init__.py
.github/skills/presenter/sdpm/layout/: __init__.py
.github/skills/presenter/sdpm/preview/: __init__.py  backend.py
.github/skills/presenter/sdpm/reference/: __init__.py  providers.py
.github/skills/presenter/templates/: blank-dark.pptx  blank-light.pptx
(+3980 files in other folders)
